--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-cpp-5.2.0.jar" sourcepath="lib/pmd-cpp-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-cs-5.2.0.jar" sourcepath="lib/pmd-cs-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-fortran-5.2.0.jar" sourcepath="lib/pmd-fortran-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-go-5.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-java-5.2.0.jar" sourcepath="lib/pmd-java-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-javascript-5.2.0.jar" sourcepath="lib/pmd-javascript-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-jsp-5.2.0.jar" sourcepath="lib/pmd-jsp-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-php-5.2.0.jar" sourcepath="lib/pmd-php-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-plsql-5.2.0.jar" sourcepath="lib/pmd-plsql-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-ruby-5.2.0.jar" sourcepath="lib/pmd-ruby-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-vm-5.2.0.jar" sourcepath="lib/pmd-vm-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-xml-5.2.0.jar" sourcepath="lib/pmd-xml-5.2.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-core-5.2.0.jar" sourcepath="lib/pmd-core-5.2.0-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-5.1.3.jar" sourcepath="lib/pmd-5.1.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/asm-5.0_BETA.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/asm-5.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.1.jar"/>
-    <classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8-dom.jar"/>
-    <classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8-dom.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
