--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -3,25 +3,26 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/pmd-core-5.2.0.jar,\
-               lib/pmd-cpp-5.2.0.jar,\
-               lib/pmd-cs-5.2.0.jar,\
-               lib/pmd-fortran-5.2.0.jar,\
-               lib/pmd-go-5.2.0.jar,\
-               lib/pmd-java-5.2.0.jar,\
-               lib/pmd-javascript-5.2.0.jar,\
-               lib/pmd-jsp-5.2.0.jar,\
-               lib/pmd-php-5.2.0.jar,\
-               lib/pmd-plsql-5.2.0.jar,\
-               lib/pmd-ruby-5.2.0.jar,\
-               lib/pmd-vm-5.2.0.jar,\
-               lib/pmd-xml-5.2.0.jar,\
-               lib/jaxen-1.1.1.jar,\
-               lib/asm-5.0.2.jar,\
+               lib/pmd-core-5.2.1.jar,\
+               lib/pmd-cpp-5.2.1.jar,\
+               lib/pmd-cs-5.2.1.jar,\
+               lib/pmd-fortran-5.2.1.jar,\
+               lib/pmd-go-5.2.1.jar,\
+               lib/pmd-java-5.2.1.jar,\
+               lib/pmd-javascript-5.2.1.jar,\
+               lib/pmd-jsp-5.2.1.jar,\
+               lib/pmd-php-5.2.1.jar,\
+               lib/pmd-plsql-5.2.1.jar,\
+               lib/pmd-ruby-5.2.1.jar,\
+               lib/pmd-vm-5.2.1.jar,\
+               lib/pmd-xml-5.2.1.jar,\
+               lib/jaxen-1.1.4.jar,\
+               lib/xml-apis-1.4.01.jar,\
+               lib/asm-5.0.3.jar,\
                icons/,\
-               lib/rhino-1.7R3.jar,\
-               lib/commons-io-2.2.jar,\
-               lib/commons-lang3-3.1.jar,\
-               lib/xercesImpl-2.9.1.jar,\
+               lib/rhino-1.7R4.jar,\
+               lib/commons-io-2.4.jar,\
+               lib/commons-lang3-3.3.2.jar,\
+               lib/xercesImpl-2.11.0.jar,\
                lib/saxon-9.1.0.8-dom.jar,\
                lib/saxon-9.1.0.8.jar
