Update Tycho to version 0.22

--- a/ch.acanda.eclipse.pmd.unsupported.tests/pom.xml
+++ b/ch.acanda.eclipse.pmd.unsupported.tests/pom.xml
@@ -32,6 +32,8 @@
                 <configuration>
                     <!-- the methods in ProjectPropertyTesterTest cannot be run in parallel -->
                     <parallel>classes</parallel>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                    <threadCount>1</threadCount>
                     <argLine>${os-jvm-flags}</argLine>
                 </configuration>
             </plugin>
