Update PMD to version 5.3.0

--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-cpp-5.2.3.jar" sourcepath="lib/pmd-cpp-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-cs-5.2.3.jar" sourcepath="lib/pmd-cs-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-fortran-5.2.3.jar" sourcepath="lib/pmd-fortran-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-go-5.2.3.jar" sourcepath="lib/pmd-go-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-java-5.2.3.jar" sourcepath="lib/pmd-java-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-javascript-5.2.3.jar" sourcepath="lib/pmd-javascript-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-jsp-5.2.3.jar" sourcepath="lib/pmd-jsp-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-php-5.2.3.jar" sourcepath="lib/pmd-php-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-plsql-5.2.3.jar" sourcepath="lib/pmd-plsql-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-ruby-5.2.3.jar" sourcepath="lib/pmd-ruby-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-vm-5.2.3.jar" sourcepath="lib/pmd-vm-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-xml-5.2.3.jar" sourcepath="lib/pmd-xml-5.2.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-core-5.2.3.jar" sourcepath="lib/pmd-core-5.2.3-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-cpp-5.3.0.jar" sourcepath="lib/pmd-cpp-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-cs-5.3.0.jar" sourcepath="lib/pmd-cs-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-fortran-5.3.0.jar" sourcepath="lib/pmd-fortran-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-go-5.3.0.jar" sourcepath="lib/pmd-go-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-java-5.3.0.jar" sourcepath="lib/pmd-java-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-javascript-5.3.0.jar" sourcepath="lib/pmd-javascript-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-jsp-5.3.0.jar" sourcepath="lib/pmd-jsp-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-matlab-5.3.0.jar" sourcepath="lib/pmd-matlab-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-objectivec-5.3.0.jar" sourcepath="lib/pmd-objectivec-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-php-5.3.0.jar" sourcepath="lib/pmd-php-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-plsql-5.3.0.jar" sourcepath="lib/pmd-plsql-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-python-5.3.0.jar" sourcepath="lib/pmd-python-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-ruby-5.3.0.jar" sourcepath="lib/pmd-ruby-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-scala-5.3.0.jar" sourcepath="lib/pmd-scala-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-vm-5.3.0.jar" sourcepath="lib/pmd-vm-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-xml-5.3.0.jar" sourcepath="lib/pmd-xml-5.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-core-5.3.0.jar" sourcepath="lib/pmd-core-5.3.0-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
