--- a/ch.acanda.eclipse.pmd.core/pom.xml
+++ b/ch.acanda.eclipse.pmd.core/pom.xml
@@ -21,7 +21,6 @@
 
     <properties>
         <libPath>${basedir}/lib</libPath>
-        <pmdVersion>5.3.2</pmdVersion>
     </properties>
 
     <build>
@@ -54,188 +53,188 @@
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-core</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-core</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-cpp</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-cpp</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-cs</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-cs</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-fortran</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-fortran</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-go</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-go</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-java</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-java</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-javascript</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-javascript</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-jsp</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-jsp</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-matlab</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-matlab</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-objectivec</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-objectivec</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-php</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-php</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-plsql</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-plsql</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-python</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-python</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-ruby</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-ruby</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-scala</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-scala</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-vm</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-vm</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-xml</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.sourceforge.pmd</groupId>
                                     <artifactId>pmd-xml</artifactId>
-                                    <version>${pmdVersion}</version>
+                                    <version>${pmd-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
