--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -11,11 +11,16 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <version>1.6.0-SNAPSHOT</version>
-    <groupId>ch.acanda.eclipse.pmd</groupId>
+    <parent>
+        <groupId>ch.acanda.eclipse.pmd</groupId>
+        <artifactId>eclipse-pmd</artifactId>
+        <version>1.6.0-SNAPSHOT</version>
+        <relativePath>../eclipse-pmd</relativePath>
+    </parent>
+
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <name>eclipse-pmd parent</name>
+    <name>eclipse-pmd plug-in</name>
     <url>http://acanda.github.io/eclipse-pmd/</url>
 
     <properties>
