--- a/ch.acanda.eclipse.pmd.repository/pom.xml
+++ b/ch.acanda.eclipse.pmd.repository/pom.xml
@@ -7,9 +7,8 @@
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html
 -->
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -23,9 +22,12 @@
     <artifactId>repository</artifactId>
     <packaging>eclipse-repository</packaging>
     <name>eclipse-pmd repository</name>
-    
+
+    <distributionManagement />
+
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
                 <artifactId>tycho-p2-director-plugin</artifactId>
@@ -45,6 +47,36 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>wagon-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>upload</goal>
+                        </goals>
+                        <configuration>
+                            <fromDir>${project.build.directory}/repository</fromDir>
+                            <includes>**</includes>
+                            <url>ftp://ftp.acanda.ch</url>
+                            <toDir>/httpdocs/eclipse-pmd/dev</toDir>
+                            <serverId>plugin-repository</serverId>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
+
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ftp</artifactId>
+                <version>2.8</version>
+            </extension>
+        </extensions>
+
     </build>
 </project>
