--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -24,8 +24,8 @@
     <url>http://acanda.github.io/eclipse-pmd/</url>
 
     <properties>
-        <tycho-version>0.22.0</tycho-version>
-        <tycho-extras-version>0.22.0</tycho-extras-version>
+        <tycho-version>0.23.0</tycho-version>
+        <tycho-extras-version>${tycho-version}</tycho-extras-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <os-jvm-flags /> <!-- see <profiles> for os specific flags -->
         <eclipse-release>indigo</eclipse-release>
@@ -98,7 +98,7 @@
                         <artifact>
                             <groupId>ch.acanda.eclipse.pmd</groupId>
                             <artifactId>${eclipse-release}</artifactId>
-                            <classifier>${eclipse-release}</classifier>
+                            <version>${project.version}</version>
                         </artifact>
                     </target>
                     <ignoreTychoRepositories>true</ignoreTychoRepositories>
