--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ install:
   - sudo apt-get install metacity
 
 before_script:
+  - sudo rm /etc/mavenrc
+  - export MAVEN_OPTS="-Xmx1g"
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 10 # give xvfb some time to start
@@ -20,4 +22,3 @@ script:
   - mvn clean integration-test -f ch.acanda.eclipse.pmd/pom.xml -B -Declipse-release=kepler
   - mvn clean integration-test -f ch.acanda.eclipse.pmd/pom.xml -B -Declipse-release=luna
   - mvn clean integration-test -f ch.acanda.eclipse.pmd/pom.xml -B -Declipse-release=mars
-
