Set date for release 1.6

--- a/website/pom.xml
+++ b/website/pom.xml
@@ -27,6 +27,16 @@
             <resource>
                 <directory>src/html</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>**/*.html</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/html</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/*.html</exclude>
+                </excludes>
             </resource>
         </resources>
 
