--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
-env: 
+env:
   global:
     - DISPLAY=:99
     - MAVEN_OPTS="-Xmx512m"
@@ -10,7 +10,8 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=kepler"
     - ECLIPSE_RELEASE="-Declipse-release=luna"
     - ECLIPSE_RELEASE="-Declipse-release=mars"
-    
+    - ECLIPSE_RELEASE="-Declipse-release=neon"
+
 jdk: oraclejdk8
 
 install:
