--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -279,7 +279,29 @@
                 <repository>
                     <id>mars</id>
                     <layout>p2</layout>
-                    <url>http://download.eclipse.org/eclipse/updates/4.5milestones</url>
+                    <url>http://download.eclipse.org/releases/mars/</url>
+                </repository>
+                <repository>
+                    <id>swtbot</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.2.1/</url>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
+            <id>eclipse-neon</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>neon</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>neon</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/eclipse/updates/4.6milestones/S-4.6M1-201508052000</url>
                 </repository>
                 <repository>
                     <id>swtbot</id>
