--- a/website/pom.xml
+++ b/website/pom.xml
@@ -10,41 +10,34 @@
     </parent>
 
     <artifactId>website</artifactId>
+    <packaging>pom</packaging>
     <name>eclipse-pmd Website</name>
     <url>http://acanda.github.io/eclipse-pmd/</url>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>acanda-maven-snapshots</id>
+            <url>http://acanda.ch/maven/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
         <build-year>${maven.build.timestamp}</build-year>
+        <jbake-content-dir>${project.basedir}/src/main/jbake/content</jbake-content-dir>
+        <filtered-jbake-content-dir>../../../target/jbake/content</filtered-jbake-content-dir>
+        <java-jdk-version>${java.version}</java-jdk-version>
     </properties>
 
     <build>
-        <defaultGoal>process-resources</defaultGoal>
-
-        <resources>
-            <resource>
-                <directory>src/main/html</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>**/*.html</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/html</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>**/*.html</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <directory>target/generated-docs</directory>
-                <filtering>false</filtering>
-                <includes>
-                    <include>**/*.html</include>
-                </includes>
-            </resource>
-        </resources>
+        <defaultGoal>generate-resources</defaultGoal>
 
         <plugins>
 
@@ -75,26 +68,61 @@
             </plugin>
 
             <plugin>
-                <groupId>org.asciidoctor</groupId>
-                <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.2</version>
+                <artifactId>maven-resources-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>output-html</id>
+                        <id>filter-jbake-contents</id>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${jbake-content-dir}/../${filtered-jbake-content-dir}</outputDirectory>
+                            <overwrite>true</overwrite>
+                            <resources>
+                                <resource>
+                                    <directory>${jbake-content-dir}</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>ch.acanda.maven</groupId>
+                <artifactId>jbake-maven-plugin</artifactId>
+                <version>0.0.10-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <id>default-generate</id>
                         <phase>generate-resources</phase>
                         <goals>
-                            <goal>process-asciidoc</goal>
+                            <goal>generate</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <backend>html</backend>
-                    <attributes>
-                        <java-spec-version>${java-spec-version}</java-spec-version>
-                        <java-jdk-version>${java.version}</java-jdk-version>
-                    </attributes>
+                    <properties>
+                        <content.folder>${filtered-jbake-content-dir}</content.folder>
+                        <buildYear>${build-year}</buildYear>
+                    </properties>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.freemarker</groupId>
+                        <artifactId>freemarker</artifactId>
+                        <version>2.3.20</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj</artifactId>
+                        <version>1.5.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
+
         </plugins>
 
     </build>
