--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: java
 
 env:
@@ -14,14 +16,16 @@ env:
 
 jdk: oraclejdk8
 
-install:
-  - sudo apt-get update
-  - sudo apt-get install metacity
+install: true
+
+addons:
+  apt:
+    packages:
+    - metacity
 
 before_script:
-  - sudo rm /etc/mavenrc
   - sh -e /etc/init.d/xvfb start
   - sleep 10 # give xvfb some time to start
-  - metacity --sm-disable --replace &
+  - metacity --sm-disable --replace 2> metacity.err &
 
 script: mvn clean integration-test -f ch.acanda.eclipse.pmd/pom.xml -B $ECLIPSE_RELEASE
