--- a/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
+++ b/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
@@ -46,6 +46,7 @@
                 <configuration>
                     <useUIHarness>true</useUIHarness>
                     <useUIThread>false</useUIThread>
+                    <showEclipseLog>true</showEclipseLog>
                     <argLine>${os-jvm-flags}</argLine>
                     <product>org.eclipse.sdk.ide</product>
                     <application>org.eclipse.ui.ide.workbench</application>
