Skip SWTBot test on Travis CI

--- a/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
+++ b/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
@@ -61,4 +61,13 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>skipSWTBot</id>
+            <properties>
+                <maven.test.skip>true</maven.test.skip>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
