--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+sudo: false
+
 language: java
 
 env:
   global:
-    - DISPLAY=:99
     - MAVEN_OPTS="-Xmx512m"
   matrix:
     - ECLIPSE_RELEASE=""
@@ -14,14 +15,8 @@ env:
 
 jdk: oraclejdk8
 
-install:
-  - sudo apt-get update
-  - sudo apt-get install metacity
+cache:
+  directories:
+  - $HOME/.m2
 
-before_script:
-  - sudo rm /etc/mavenrc
-  - sh -e /etc/init.d/xvfb start
-  - sleep 10 # give xvfb some time to start
-  - metacity --sm-disable --replace &
-
-script: mvn clean integration-test -f ch.acanda.eclipse.pmd/pom.xml -B $ECLIPSE_RELEASE
+script: mvn clean verify -f ch.acanda.eclipse.pmd/pom.xml -B -PskipSWTBot $ECLIPSE_RELEASE
