Only show 'PMD' property page if project is open

--- a/ch.acanda.eclipse.pmd.core/plugin.xml
+++ b/ch.acanda.eclipse.pmd.core/plugin.xml
@@ -78,6 +78,10 @@
          <enabledWhen>
             <adapt
                   type="org.eclipse.core.resources.IProject">
+               <test
+                     property="org.eclipse.core.resources.open"
+                     value="true">
+               </test>
             </adapt>
          </enabledWhen>
       </page>
