Update Tycho to version 1.0.0

--- a/ch.acanda.eclipse.pmd.unsupported.tests/pom.xml
+++ b/ch.acanda.eclipse.pmd.unsupported.tests/pom.xml
@@ -32,8 +32,7 @@
                 <configuration>
                     <!-- the methods in ProjectPropertyTesterTest cannot be run in parallel -->
                     <parallel>classes</parallel>
-                    <perCoreThreadCount>true</perCoreThreadCount>
-                    <threadCount>1</threadCount>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
                     <argLine>${os-jvm-flags}</argLine>
                 </configuration>
             </plugin>
